added a few screenshots

--- a/docs/00-Intro/0.1.md
+++ b/docs/00-Intro/0.1.md
@@ -26,7 +26,7 @@ Steps:
    <br>
    Note: you may receive some yellow warnings during installation.  Most of the time, nothing is breaking and
    you can continue.
-9. As a result of the installation you should have a new folder: node_modules(screenshot)
+9. As a result of the installation you should have a new folder: node_modules(screenshot or file path?)
 10. Run the following command to see a starter project show up in the browser window:
     <br>
     `gulp dev`
