added a few more screenshots

--- a/docs/01-Portfolio Structure/1.0.md
+++ b/docs/01-Portfolio Structure/1.0.md
@@ -26,7 +26,9 @@ your own version of it in the steps below. {% youtube %}https://www.youtube.com/
 1. Please start by taking a look at the instructional video.
 2. Where needed, pause the video and check to be sure that you are on the module-1-setup
    branch in the example project. Again, you can do this by clicking in the lower left
-   corner in VS Code. (screenshot)
+   corner in VS Code and selecting your desired branch at the top of the screen.
+   <br>
+   ![Lower Left Corner](Branch.png) ![Top Center](bselect.png)
 3. Now that you are on the branch, listen to how you would get a project like this started.
 4. Start building **your own version** of the project. Things that you'll want to do in this
    phase:
