--- a/docs/02-Gulp and Browser Sync/2.0.md
+++ b/docs/02-Gulp and Browser Sync/2.0.md
@@ -22,7 +22,7 @@ project up for you. The only problem with this route: it won't reload when you m
 2. The finished code for this module can be found at this [branch](https://github.com/ElevenfiftyAcademy/JavaScript-151-PortfolioStarter/tree/module-2-gulpsetup). However, please don't
    simply copy and paste the code. Readme notes also have useful resources.
 3. Check to be sure that you are on the `module-2-setup` branch in the example project. Again,
-   you can do this by clicking in the lower left corner in VS Code. (add screenshot)
+   you can do this by clicking in the lower left corner in VS Code.
 4. Things that you'll want to do in your own project in this phase:
     * Run `npm init` to start up a package.json file. Just hit enter through all the questions
       or answer them how you'd like.
