more screenshots, where are my pics?

--- a/docs/02-Gulp and Browser Sync/2.0.md
+++ b/docs/02-Gulp and Browser Sync/2.0.md
@@ -30,6 +30,8 @@ project up for you. The only problem with this route: it won't reload when you m
     * Install BrowserSync: `npm install browser-sync --save-dev`
     * Install gulp packages: `npm install gulp gulp-clean-css gulp-filter gulp-header gulp-rename gulp-sass gulp-uglify gulp-watch --save-dev`
     * Set up and test your gulp file so that your browser reloads after you make a change. You can
-      use our starter file to help you. Make sure to read the code though. (screenshots?)
+      use our starter file to help you. Make sure to read the code though.
+      <br>
+      ![Variables](GulpVars.png) ![Function](GulpServe.png)
     * Commit your code and push it to your Github repository when finished.
 5. Go to the next module.
