fixed file names

--- a/docs/01-Portfolio Structure/1.0.md
+++ b/docs/01-Portfolio Structure/1.0.md
@@ -28,7 +28,7 @@ your own version of it in the steps below. {% youtube %}https://www.youtube.com/
    branch in the example project. Again, you can do this by clicking in the lower left
    corner in VS Code and selecting your desired branch at the top of the screen.
    <br>
-   ![Lower Left Corner](Branch.png) ![Top Center](bselect.png)
+   ![Lower Left Corner](Branch.PNG) ![Top Center](bselect.png)
 3. Now that you are on the branch, listen to how you would get a project like this started.
 4. Start building **your own version** of the project. Things that you'll want to do in this
    phase:
