--- a/docs/02-Gulp and Browser Sync/2.0.md
+++ b/docs/02-Gulp and Browser Sync/2.0.md
@@ -32,6 +32,6 @@ project up for you. The only problem with this route: it won't reload when you m
     * Set up and test your gulp file so that your browser reloads after you make a change. You can
       use our starter file to help you. Make sure to read the code though.
       <br>
-      ![Variables](GulpVars.png) ![Function](GulpServe.png)
+      ![Variables](GulpVars.PNG) ![Function](GulpServe.PNG)
     * Commit your code and push it to your Github repository when finished.
 5. Go to the next module.
