--- a/docs/13-Modals Setup/13.0.md
+++ b/docs/13-Modals Setup/13.0.md
@@ -15,13 +15,13 @@ Here we just want to get a modals section to pop up when we click on an image. I
 5. Notice, it's now in the `package.json` file.
 6. You will simply have to run `npm install` in the command line to get the package in your node_modules folder.
 7. Then, we added a link to the CSS file in the head:
-![CSS Link](Modals1.png)
+![CSS Link](Modals1.PNG)
 8. Like the other tools we've used, we also added the JS file at he bottom of the project:
-![JS File](Modals2.png)
+![JS File](Modals2.PNG)
 9. Next, we tried to find a simple way to get the library working. A little reading of the [docs](http://dimsemenov.com/plugins/magnific-popup/), led to the discovery of a [codepen](https://codepen.io/dimsemenov/pen/hutrb), assembled by the creator of magnific-popup. The codepen showcases the usage of the tool in a streamlined way, so we followed his example somewhat closely.
 10. To see what we did, take special note of the following files/lines:
     * index.html ------> Lines 95-96.
-    ![index.html](95-96.png)
+    ![index.html](95-96.PNG)
         * Notice additional classes and a few other items.
         * That pattern gets repeated for all seven other portfolio items.
     * main.js -----> Lines 12-36.
