module 3 code fixed

--- a/docs/03-Gulp and Browser Sync/3.0.md
+++ b/docs/03-Gulp and Browser Sync/3.0.md
@@ -31,7 +31,33 @@ project up for you. The only problem with this route: it won't reload when you m
     * Install gulp packages: `npm install gulp gulp-clean-css gulp-filter gulp-header gulp-rename gulp-sass gulp-uglify gulp-watch --save-dev`
     * Set up and test your gulp file so that your browser reloads after you make a change. You can
       use our starter file to help you. Make sure to read the code though.
-      <br>
-      ![Variables](GulpVars.PNG) ![Function](GulpServe.PNG)
+      ```js
+      /*  Gulp will be used for development and deployment tasks, 
+      such as minification of code, translating SCSS into SASS & CSS,
+      and reloading after a save.See the README.md for gulp commands.
+      */
+      var gulp        = require('gulp');
+      var browserSync = require('browser-sync').create();
+      var reload      = browserSync.reload;
+      /* Our objective is to make some html stubs and be able to have the browser change everytime we save.
+      // So the first parameter is the gulp task name. This is what we call on the command line.
+      // When we run gulp serve, it will fire a function that initializes browserSync and serves up
+      // the index.html from the base of the project.
+      // the gulp.watch will look for changes in the .html and the .css files.
+      // At this point, try running gulp serve.
+      // Then, with the app up, change both the index.html & the main.css files. Be sure to save.
+      // It doesn't work if you just change the .css and save.
+      // We'll add more here later.
+      */
+      gulp.task('serve', function () {
+          /* Serve files from the root of the project */
+          browserSync.init({
+              server: {
+                  baseDir: "./"
+              }
+          });
+          gulp.watch("*.html").on("change", reload);
+      });
+      ```
     * Commit your code and push it to your Github repository when finished.
 5. Go to the next module.
