through module 5 so far

--- a/docs/00-Overview/0.0.md
+++ b/docs/00-Overview/0.0.md
@@ -8,7 +8,7 @@ Please see the starter video for an overview of this project. {% youtube %}https
 ### Project Overview
 We have consulted with out Industry Advisory Board and a major component for job consideration is that a student should be able to
 show a list of projects that they have completed, along with easy to access information about your work history and current Github
-activity. Your portfolio is one link that can be provided to future employers to showcase yuor skills and present easily accessible
+activity. Your portfolio is one link that can be provided to future employers to showcase your skills and present easily accessible
 information about you.
 
 ### Objectives
