fixed scss and gulp module

--- a/docs/06-SCSS and Gulp/6.0.md
+++ b/docs/06-SCSS and Gulp/6.0.md
@@ -23,3 +23,73 @@ In this module we set up more ways to make development cleaner. The problem that
 4. Take a quick look at the [SCSS docs](http://sass-lang.com/guide). Use these for future reference.
 5. Please kindly take a minute to update the LMS and tell us that you've completed the first group of modules.
 6. Go on to the next module.
+7. Here's the final code.
+    * `main.css` navbar
+    ```css
+    /* Variables used throughout will go here. */
+    /* CSS code for the Navbar section. */
+    #main-nav {
+    padding-top: 5rem;
+    font-size: 18px;
+    padding-bottom: 1rem; }
+
+    /* CSS code for the Header section. */
+    /* CSS code for the Portfolio section. */
+    /* CSS code for the About section. */
+    /* CSS code for the Contact section. */
+    /* CSS code for the Footer section. */
+    ```
+    * `gulpfile.js`
+    ```js
+    /*  Gulp will be used for development and deployment tasks, 
+    such as minification of code, translating SCSS into SASS & CSS,
+    and reloading after a save.See the README.md for gulp commands.
+    */
+    var gulp = require('gulp');
+    var browserSync = require('browser-sync').create();
+    var sass = require('gulp-sass');
+    var reload = browserSync.reload;
+
+    gulp.task('serve', function () {
+        /* Serve files from the root of the project */
+        browserSync.init({
+            server: {
+                baseDir: "./"
+            }
+        });
+        gulp.watch("*.html").on("change", reload);
+    });
+
+    // gulp.task('sass', function () {
+    //     return gulp.src('scss/main.scss')
+    //         .pipe(sass()) // Converts Sass to CSS with gulp-sass
+    //         .pipe(gulp.dest('css'))
+    // });
+
+    /* Compiles SCSS files from /scss into /css */
+    gulp.task('sass', function() {
+        return gulp.src('scss/main.scss')
+        .pipe(sass())
+        
+        .pipe(gulp.dest('css'))
+        .pipe(browserSync.reload({
+            stream: true
+        }))
+    });
+
+    /* Runs sass & serve methods. Watches for changes and reloads. */
+    gulp.task('dev', ['serve', 'sass'], function () {
+        gulp.watch('scss/*.scss', ['sass']);
+        gulp.watch('*.html');
+    });
+    ```
+    * `_navbar.scss`
+    ```css
+    /* CSS code for the Navbar section. */
+    /* Styling for the navbar */
+    #main-nav {
+        padding-top: 5rem;
+        font-size: 18px;
+        padding-bottom: 1rem;
+    }
+    ```
