--- a/docs/08-Header Style/8.0.md
+++ b/docs/08-Header Style/8.0.md
@@ -19,3 +19,43 @@ In this module we start to refactor what we've already stubbed out in the Header
 4. Go ahead and start adding more detail to you Header. The text should be simple and the feel should be elegant, simple, refined, etc. This could involve changing the font, adding a background image, adding some color. Just so you know, we'll talk about animations in future modules. You might want to do some reading and researching and looking for ideas. Even though this [article](https://www.smashingmagazine.com/2009/07/best-practices-for-effective-design-of-about-us-pages/) is talking about an About Me page, it has some good information on creating unique pieces in your project. (too old?)
 5. After getting you code to a good place, celebrate a small victory by committing and pushing your code.
 6. Go ahead and move onto the next module. The next module gets fun when we start to use animations.
+7. Here is the final code.
+    * `_body.scss`
+    ```css
+    /* Body section. */
+    body {
+        padding: 15px;
+    }
+    header {
+        text-align: center;
+    }
+    ```
+    * `_header.scss`
+    ```css
+    /* CSS code for the Header section. */
+    .jumbotron {
+        background: url('http://eleven50.wpengine.com/wp-content/uploads/2017/03/Learning-to-Code5.png?id=21797') no-repeat center center;
+        padding-top: 8rem;
+        padding-bottom: 8rem;
+    }
+
+    .jumbotron-heading {
+        padding-top: 50px;
+        font-weight: 400;
+    }
+
+    .jumbotron .container {
+        max-width: 60rem;
+    }
+    ```
+    * `main.scss`
+    ```css
+    @import "variables.scss";
+    @import "body.scss";
+    @import "navbar.scss";
+    @import "header.scss";
+    @import "portfolio.scss";
+    @import "about.scss";
+    @import "contact.scss";
+    @import "footer.scss";
+    ```
