--- a/docs/10-About Style/10.0.md
+++ b/docs/10-About Style/10.0.md
@@ -20,3 +20,124 @@ In this module we star to refactor our stubbed out code in the About section. In
 4. Start to stylize the About section. As you do it, you will probably want to start writing some content about yourself.
 5. Look at past student examples for ideas on phrasing and what to say. What sounds good? You might want to add some information about why you decided to become a coder.
 6. Once you get the About Section laid out, go ahead and move on. We'll be doing something a little different in the next module.
+7. Heres the final code.
+    * `index.html`
+        * `<header>`
+        ```html
+         <!--==========================
+         Header Section
+        ============================-->
+        <header class="jumbotron text-center" id="main-header">
+                <div class="container">
+                    <h1 class="jumbotron-heading">JSON SASS</h1>
+                    <div class="section-description wow fadeInUp" data-wow-duration="5s">
+        ```
+        * `About Section`
+        ```html
+        <!--==========================
+        About Section
+        ============================-->
+        <section id="about">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-12">
+                            <h3 class="section-title">About</h3>
+                            <div class="section-title-divider"></div>
+                        </div>
+                    </div>
+                    <section class="about-panel wow fadeInLeft" data-wow-delay="0.1s">
+                        <div class="col-lg-4">
+                            <p class="lead">Use this to get started with talking about your abilities. Here you will showcase your work, share contact information, attract employers, and get practice with front end development! let's have some fun!</p>
+                        </div>
+                        <div class="col-lg-4">
+                            <p class="lead">Use this to get started with talking about your abilities. Here you will showcase your work, share contact information, attract employers, and get practice with front end development! let's have some fun!</p>
+                        </div>
+                        <div class="col-lg-4">
+                            <p class="lead">Use this to get started with talking about your abilities. Here you will showcase your work, share contact information, attract employers, and get practice with front end development! let's have some fun!</p>
+                        </div>
+                    </section>
+                </div>
+        </section>
+        ```
+        * `Contact Section`
+        ```html
+        <!--==========================
+        Contact Section
+        ============================-->
+        <section id="contact">
+            <div class="container">
+                <h2 class="text-center text-uppercase">Contact Me</h2>
+                <div class="row">
+                    <form>
+                        <div class="control-group">
+                            <div class="form-group">
+                                <label>Name</label>
+                                <input class="form-control" id="name" type="text" placeholder="Name">
+                            </div>
+                        </div>
+                        <div class="control-group">
+                            <div class="form-group">
+                                <label>Email Address</label>
+                                <input class="form-control" id="email" type="email" placeholder="Email Address">
+                            </div>
+                        </div>
+                        <div class="control-group">
+                            <div class="form-group">
+                                <label>Phone Number</label>
+                                <input class="form-control" id="phone" type="tel" placeholder="Phone Number">
+                            </div>
+                        </div>
+                        <div class="control-group">
+                            <div class="form-group">
+                                <label>Message</label>
+                                <textarea class="form-control" id="message" rows="5" placeholder="Message"></textarea>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <button type="submit" class="btn btn-primary">Send</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </section>
+        ```
+        * `Footer Section`
+        ```html
+        <!--==========================
+        Footer Section
+        ============================-->
+        <footer class="bg-primary">
+            <p class="float-right">
+                <a href="#">Back to top</a>
+            </p>
+            <p>&copy; 2018 Developer Company, Inc. &middot;
+                <a href="#">Privacy</a> &middot;
+                <a href="#">Terms</a>
+            </p>
+        </footer>
+        ```
+    * `_about.scss`
+    ```css
+    /****************************
+    About Section
+    ****************************/
+    #about {
+        // background: $blue-green;
+        background: url('../assets/logo/blue-green-bg.jpg') no-repeat center center;
+    }
+
+    .about-panel {
+        visibility: visible; 
+        -webkit-animation-delay: 0.1s; 
+        -moz-animation-delay: 0.1s; 
+        animation-delay: 0.1s;
+    }
+    ```
+    * `_body.scss`
+    ```css
+    /* Body section. */
+    body {
+        padding: 15px;
+        background: url('http://eleven50.wpengine.com/wp-content/uploads/2017/03/Learning-to-Code5.png?id=21797') no-repeat center center;
+    }
+    ```
