--- a/docs/11-Contact Setup/11.0.md
+++ b/docs/11-Contact Setup/11.0.md
@@ -22,3 +22,50 @@ In this module we use a tool called Formspree that will help us take information
 7. Test the form and make sure it's working by running the app and entering a proper email.
 8. When it works, commit the code.
 9. Go to the next module.
+10. Here's the final code.
+    * `index.html`
+        * `Contact Section`
+        ```html
+        <!--==========================
+        Contact Section
+        ============================-->
+
+            <section id="contact">
+                <div class="container">
+                    <h2 class="text-center text-uppercase">Contact Me</h2>
+                    <div class="row">
+                        <form action="https://formspree.io/poconnor@elevenfifty.org" method="POST">
+                            <div class="control-group">
+                                <div class="form-group">
+                                    <label>Name</label>
+                                    <input type="text" class="form-control" placeholder="Your Name" id="name" required="" data-validation-required-message="Please enter your name"
+                                        name="name">
+                                    <p class="help-block text-danger"></p>
+
+                                </div>
+                            </div>
+                            <div class="control-group">
+                                <div class="form-group">
+                                    <label>Email Address</label>
+                                    <input type="email" class="form-control" placeholder="Your Email" id="email" required="" data-validation-required-message="Please enter your email"
+                                        name="_replyto">
+                                    <p class="help-block text-danger"></p>
+                                </div>
+                            </div>
+                            <div class="control-group">
+                                <div class="form-group">
+                                    <textarea class="form-control" rows="7" placeholder="Your Message" id="message" required="" data-validation-required-message="Please leave a message"
+                                        name="message"></textarea>
+                                    <p class="help-block text-danger"></p>
+                                </div>
+                            </div>
+                            <div class="text-center">
+                                <div id="success"></div>
+                                <button type="submit" class="btn btn-lg btn-black">
+                                    <i class="fa fa-paper-plane-o" aria-hidden="true"></i>Send Message</button>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </section>
+        ```
