fixed footer style

--- a/docs/01-Sample Project/1.0.md
+++ b/docs/01-Sample Project/1.0.md
@@ -18,7 +18,7 @@ Steps:
 6. In VS Code, press Control` to open a terminal window(ctrl + backtick, top left corner, need screenshot).
 7. Run dir or ls to check that package.json is listed in your current directory. Cd into the right directory
    (JavaScript-151-PortfolioStarter) if it isn't there.
-8. Run the following command in your window ton install a few packages you will need:
+8. Run the following command in your window to install a few packages you will need:
    <br>
    `npm install -g gulp-cli`
    <br>
